--- a/blog/templates/paginasBlog/blog.html
+++ b/blog/templates/paginasBlog/blog.html
@@ -1,8 +1,12 @@
+
 {% extends "plantillaPadre.html" %}
 {%load static%}
+
+
 {% block title %} BLOG {%endblock %}
 
 {%block content%}
+{%load static%}
 <header>
         <h1 id="titulo">blog del grupo 10</h1>
     </header>
