--- a/blog/templates/paginasBlog/blog.html
+++ b/blog/templates/paginasBlog/blog.html
@@ -8,7 +8,7 @@
 {%block content%}
 {%load static%}
 <header>
-        <h1 id="titulo">blog del grupo 10</h1>
+        <h1 id="titulo" align="center" >BLOG "Senderos"</h1>
     </header>
     <div>
         <p>soy un parrafo</p>
@@ -17,7 +17,7 @@
         <article class="post">
             <h2>Titulo de mi post</h2>
             <p>Descripcion de mi post</p>
-            <img src='{%static "img/1.jpg"%}' width="400" />
+            <img src='{%static "img/1.jpg"%}' width="100%" />
             <p>Este es un texto de prueba de como esta quedando mi post</p>
 
         </article>
