--- a/blog/templates/paginasBlog/formularioContacto.html
+++ b/blog/templates/paginasBlog/formularioContacto.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Formulario de contacto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-</head>
-<body>
-    <h1>Contactenos</h1>
+
+{% extends "plantillaPadre.html" %}
+{%load static%}
+{% block title %} Contacto {%endblock %}
+
+{%block content%}
+ <h1>Contactenos</h1>
     <form action="/contactar/" method="post">{% csrf_token %}
         <div class="container">
         <p>Asunto: <input type="text" class="form-control" name="txtAsunto"/></p>
@@ -19,8 +18,4 @@
         <input type="submit" value="Enviar"/>
         </div>
     </form>
-
-
-</body>
-</html>
-
+{%endblock%}
