--- a/blog/templates/paginasBlog/plantillaBarraNavegacion.html
+++ b/blog/templates/paginasBlog/plantillaBarraNavegacion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html>
     <body>
        <nav class="navbar navbar-expand-lg bg-light">
        <div class="container-fluid">
           <a class="navbar-brand" href="/">BLOG</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" ba type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -20,7 +21,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/publicaciones/">Publicaciones</a>
-            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Areas de estudio
@@ -34,10 +34,22 @@
             <li class="nav-item">
               <a class="nav-link" href="/formularioContacto/">Contactanos</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="/register/">Registro</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="/login/">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout/">Logout</a>
+            </li>
           </ul>
+
 
         </div>
       </div>
       </nav>
+
+
     </body>
 </html>
