--- a/blog/templates/paginasBlog/plantillaPadre.html
+++ b/blog/templates/paginasBlog/plantillaPadre.html
@@ -2,9 +2,11 @@
 {%load static%}
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
    
     <title>{% block title %} {%endblock %}</title>
-    <!--<link type="text/css" href='{% static "css/bootstrap.min.css"%}' rel="stylesheet" /> -->
+    <!--<link type="text/css" href='{% static "css/bootstrap.min.css"%}' rel="stylesheet" />-->
     <style>
       .img-container {
         text-align: center;
@@ -13,16 +15,18 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
     {%include "plantillaBarraNavegacion.html"%}
     <div class="container">
         <div class="row">
-             <div class="col-md-8">
+             <div class="col-md-12">
 
                   {% block content %}
 
@@ -31,15 +35,17 @@
             <!--<div class="col-md-4">
                 <h1>hola mundo</h1>
             </div>-->
-            <div class="col-md-4">
-                <p align="center">Categrias</p>
-            </div>
+            <!--<div class="col-md-2">
+
+            </div>-->
 
         </div>
 
     </div>
 
-
-    <script type="text/javascript" src='{%static "js/plantillaPadre.js"%}'></script>
+<!-- JavaScript Bundle with Popper -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src='{%static "js/plantillaPadre.js"%}'></script>-->
 </body>
 </html>
