--- a/blog/templates/paginasBlog/quienesSomos.html
+++ b/blog/templates/paginasBlog/quienesSomos.html
@@ -3,7 +3,12 @@
 {% block title %} Nosotros {%endblock %}
 
 {%block content%}
-<h1 style="color: blue;" align="center" >Reserva Educativa "SENDEROS"</h1>
+<div class="container">
+  <div class="jumbotron">
+    <h1 style="color: blue;">Reserva Educativa "SENDEROS"</h1>
+  </div>
+</div>
+
 <div>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicadores -->
