--- a/blog/templates/post/index.html
+++ b/blog/templates/post/index.html
@@ -1,6 +1,6 @@
 {% extends "plantillaPadre.html" %}
 {%load static%}
-{% block title %} Plantilla hija 1 {%endblock %}
+{% block title %} Posteo {%endblock %}
 
 {%block content%}
 <form method="POST" enctype="multipart/form-data">
@@ -15,4 +15,6 @@
 
     </div>
 </form>
+
+
 {%endblock%}
