--- a/blog/templates/paginasBlog/plantillaBarraNavegacion.html
+++ b/blog/templates/paginasBlog/plantillaBarraNavegacion.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/formularioContacto/">Contactanos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/crear_post/">Crear Post</a>
+            </li>
              <li class="nav-item">
               <a class="nav-link" href="/register/">Registro</a>
             </li>
