--- a/blog/templates/paginasBlog/plantillaBarraNavegacion.html
+++ b/blog/templates/paginasBlog/plantillaBarraNavegacion.html
@@ -37,7 +37,16 @@
             <li class="nav-item">
               <a class="nav-link" href="/crear_post/">Crear Post</a>
             </li>
-            <li class="nav-item dropdown">
+
+
+
+
+
+
+          </ul>
+
+            <ul class="nav justify-content-end">
+                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Logueo
                 </a>
@@ -51,17 +60,20 @@
                     {% endif %}
               </ul>
               </li>
-
-             <li class="nav-item">
-              <a class="nav-link" href="/register/">Registro</a>
-            </li>
-
-          </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register/">Registro</a>
+                </li>
 
 
+</ul>
         </div>
       </div>
+
+
       </nav>
+
+
+
 
 
     </body>
