--- a/blog/templates/paginasBlog/quienesSomos.html
+++ b/blog/templates/paginasBlog/quienesSomos.html
@@ -4,12 +4,12 @@
 
 {%block content%}
 <div class="container">
-  <div class="jumbotron">
-    <h1 style="color: blue;">Reserva Educativa "SENDEROS"</h1>
-  </div>
-</div>
-
-<div>
+    <div class="panel panel-default">
+    <div class="panel-heading">
+        <h1 align="center" style="color: blue;">Reserva Educativa "SENDEROS"</h1>
+    </div>
+    <div class="panel-body">
+        <div>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicadores -->
                 <ol class="carousel-indicators">
@@ -105,5 +105,13 @@ La Reserva comprende toda la masa boscosa muy rica en su
 biodiversidad y parte de pastizales del sector agrícola .
 
 </p>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
 {%endblock%}
