--- a/blog/templates/post/index.html
+++ b/blog/templates/post/index.html
@@ -6,7 +6,7 @@
 <form method="POST" enctype="multipart/form-data">
 {%csrf_token%}
     <div class="card">
-        <h5 class="card-header">Posteo</h5>
+        <h1 align="center" class="card-header">Posteo</h1>
         <div class="card-body">
             {{post_form.as_p}}
         </div>
