--- a/blog/templates/paginasBlog/blog.html
+++ b/blog/templates/paginasBlog/blog.html
@@ -12,12 +12,22 @@
       <div class="col-xs-2">
       </div>
       <div class="col-xs-6">
-       <button type="button" class="btn btn-info" value="Click Me" style="float: right;">
+      <!-- <button type="submit" class="btn btn-success" value="Click Me" style="float: right;">
       <span class="glyphicon glyphicon-search"></span> Search
-    </button>
+    </button>-->
       </div>
       <div class="col-xs-4">
-        <input class="form-control" id="ex3" type="text">
+           <form class="row g-3">
+
+  <div class="col-auto">
+
+    <input type="text" class="form-control"  placeholder="Buscar..." name="buscar">
+  </div>
+  <div class="col-auto" >
+    <button type="submit" class="btn btn-success">Search</button>
+  </div>
+        </form>
+       <!-- <input class="form-control" type="text" placeholder="Buscar..." name="buscar">-->
       </div>
     </div>
 
@@ -37,27 +47,16 @@
     <div class="img-container">
         <img  src='static/{{post.imagen}}'  width="50%" />
     </div>
-
     <p align="center">Creado: {{post.fecha_creacion}}/ Autor: {{post.usuario}}</p>
-
   {%endfor%}
-
         </article>
     </section>
-
-    </div>
+    <footer>
       <div class="panel-footer">
            <a href="#titulo">Ir al comienzo</a><br>
         <a href="/formularioContacto/">Contactame aqui</a>
         <p>Copirigth 2022</p>
       </div>
-  </div>
-</div>
-
-
-
-    <footer>
-
     </footer>
 
 {%endblock%}
