--- a/blog/templates/paginasBlog/formularioContacto.html
+++ b/blog/templates/paginasBlog/formularioContacto.html
@@ -1,6 +1,6 @@
 
 
-{% extends "plantillaPadre.html" %}
+{% extends "paginasBlog/plantillaPadre.html" %}
 {%load static%}
 {% block title %} Contacto {%endblock %}
 
