--- a/blog/templates/paginasBlog/plantillaHija2.html
+++ b/blog/templates/paginasBlog/plantillaHija2.html
@@ -1,5 +1,5 @@
 
-{% extends "plantillaPadre.html" %}
+{% extends "paginasBlog/plantillaPadre.html" %}
 {%load static%}
 {% block title %} Plantilla hija 2 {%endblock %}
 
