--- a/blog/templates/paginasBlog/plantillaHija1.html
+++ b/blog/templates/paginasBlog/plantillaHija1.html
@@ -1,4 +1,4 @@
-{% extends "plantillaPadre.html" %}
+{% extends "paginasBlog/plantillaPadre.html %}
 {%load static%}
 {% block title %} Plantilla hija 1 {%endblock %}
 
