--- a/blog/templates/paginasBlog/blog.html
+++ b/blog/templates/paginasBlog/blog.html
@@ -1,21 +1,40 @@
 {% extends "paginasBlog/plantillaPadre.html" %}
 {%load static%}
-
 {% block title %} BLOG {%endblock %}
-
 {%block content%}
-{%load static%}
-
-
 <div class="container">
     <div class="form-group row">
-      <div class="col-xs-6">
+      <div class="col-xs-4">
+          <form class="row g-3">
+              <div class="col-auto">
+                  <select class="form-control input-solid" name="fecha">
+                    <option selected>Meses</option>
+                    <option>Enero</option>
+                    <option>Febrero</option>
+                    <option>Marzo</option>
+                    <option>Abril</option>
+                    <option>Mayo</option>
+                    <option>Junio</option>
+                    <option>Julio</option>
+                    <option>Agosto</option>
+                    <option>Septiembre</option>
+                    <option>Octubre</option>
+                    <option>Noviembre</option>
+                    <option>Diciembre</option>
+                  </select>
+              </div>
+              <div class="col-auto" >
+                 <button type="submit" class="btn btn-success" value="Click Me" style="float: right;">
+                  Filtrar por mes
+                 </button>
+              </div>
+          </form>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-4">
           <form class="row g-3">
               <div class="col-auto">
                   <select class="form-control input-solid" name="categoria" >
-                  <option></option>
+                  <option selected>Categorias</option>
                     {% for categoria in categorias %}
                   <option>{{categoria.nombre}}</option>
                     {% endfor %}
@@ -23,13 +42,11 @@
               </div>
               <div class="col-auto" >
                  <button type="submit" class="btn btn-success" value="Click Me" style="float: right;">
-                 <span class="glyphicon glyphicon-search"></span> Filtrar
+                  Filtrar por categoria
                  </button>
               </div>
            </form>
       </div>
-
-
       <div class="col-xs-4">
            <form class="row g-6">
                <div class="col-auto">
