--- a/blog/templates/paginasBlog/plantillaHija1.html
+++ b/blog/templates/paginasBlog/plantillaHija1.html
@@ -1,10 +1,7 @@
-{% extends "paginasBlog/plantillaPadre.html %}
+{% extends "paginasBlog/plantillaPadre.html" %}
 {%load static%}
 {% block title %} Plantilla hija 1 {%endblock %}
 
 {%block content%}
-<p>
-    este contenido forma partge de la plantillahija 1
-</p>
-<img src='{%static "img/teclas.jpg"%}' width="300"/>
+
 {%endblock%}
