--- a/blog/templates/paginasBlog/contactoExitoso.html
+++ b/blog/templates/paginasBlog/contactoExitoso.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    <h1>Formulario de contaco enviado con exito</h1>
-</body>
-</html>
+{% extends "paginasBlog/plantillaPadre.html" %}
+{%load static%}
+{% block title %} Enviado {%endblock %}
+
+{%block content%}
+ <h1 align="center">Formulario de contaco enviado con exito</h1>
+{%endblock%}
