--- a/blog/templates/paginasBlog/logout.html
+++ b/blog/templates/paginasBlog/logout.html
@@ -5,5 +5,5 @@
 {% block title %} Logout {%endblock %}
 
 {%block content%}
-      <h1>Te has deslogueado</h1>
+      <h1 align="center">Te has deslogueado</h1>
 {%endblock%}
