--- a/blog/templates/post/index.html
+++ b/blog/templates/post/index.html
@@ -3,18 +3,18 @@
 {% block title %} Posteo {%endblock %}
 
 {%block content%}
+<div>
 <form method="POST" enctype="multipart/form-data">
 {%csrf_token%}
     <div class="card">
         <h1 align="center" class="card-header">Posteo</h1>
         <div class="card-body">
             {{post_form.as_p}}
+        <button type="submit" class="btn btn-primary btn-round">Guardar</button>
+        <a href="{% url 'crear_post' %}" class="btn btn-danger">Cancelar</a>
         </div>
-        <button type="submit">Guardar</button>
-        <a href="{% url 'crear_post' %}">Cancelar</a>
-
     </div>
 </form>
-
+</div>
 
 {%endblock%}
