--- a/blog/templates/paginasBlog/plantillaBarraNavegacion.html
+++ b/blog/templates/paginasBlog/plantillaBarraNavegacion.html
@@ -27,9 +27,9 @@
                 Areas de estudio
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">FAUNA</a></li>
-                    <li><a class="dropdown-item" href="#">FLORA</a></li>
-                    <li><a class="dropdown-item" href="#">HONGOS</a></li>
+                    <li><a class="dropdown-item" href="/fauna/">FAUNA</a></li>
+                    <li><a class="dropdown-item" href="/flora/">FLORA</a></li>
+                    <li><a class="dropdown-item" href="/hongos/">HONGOS</a></li>
                 </ul>
             </li>
             <li class="nav-item">
