--- a/blog/templates/paginasBlog/secciones/proyectos.html
+++ b/blog/templates/paginasBlog/secciones/proyectos.html
@@ -3,5 +3,34 @@
 {% block title %} Enviado {%endblock %}
 
 {%block content%}
- <h1 align="center">Proyectos</h1>
+<div class="container">
+  <div class="panel panel-default">
+      <div class="panel-heading">
+          <h1 id="titulo" align="center" >"Proyectos"</h1>
+      </div>
+      <div class="panel-body">
+        <section>
+            <article class="post">
+                {% for post in proyectos %}
+                     <h2 align="center">{{post.titulo}}</h2>
+                     <p>{{post.resumen}}</p>
+                     <p>{{post.texto}}</p>
+                     <div class="img-container">
+                        <img  src='/static/{{post.imagen}}'  width="50%" />
+                     </div>
+                     <p align="center">Creado: {{post.fecha_creacion}}/ Autor: {{post.usuario}}</p>
+                {%endfor%}
+            </article>
+        </section>
+      </div>
+  </div>
+
+    <footer>
+      <div class="panel-footer">
+           <a href="#titulo">Ir al comienzo</a><br>
+        <a href="/formularioContacto/">Contactame aqui</a>
+        <p>Copirigth 2022</p>
+      </div>
+    </footer>
+</div>
 {%endblock%}
