--- a/blog/templates/paginasBlog/register.html
+++ b/blog/templates/paginasBlog/register.html
@@ -1,4 +1,4 @@
-{% extends "plantillaPadre.html" %}
+{% extends "paginasBlog/plantillaPadre.html" %}
 {%load static%}
 {% block title %} Regitro {%endblock %}
 
