--- a/blog/templates/post/index.html
+++ b/blog/templates/post/index.html
@@ -1,4 +1,4 @@
-{% extends "paginasBlog/plantillaPadre.html" %}
+{% extends "plantillaPadre.html" %}
 {%load static%}
 {% block title %} Posteo {%endblock %}
 
