--- a/blog/templates/paginasBlog/quienesSomos.html
+++ b/blog/templates/paginasBlog/quienesSomos.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h1 align="center" style="color: blue;">Reserva Educativa "SENDEROS"</h1>
+                <h1 id="titulo" align="center" style="color: blue;">Reserva Educativa "SENDEROS"</h1>
             </div>
             <div class="panel-body">
                 <div>
