--- a/blog/templates/paginasBlog/plantillaBarraNavegacion.html
+++ b/blog/templates/paginasBlog/plantillaBarraNavegacion.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-
+{%load static%}
 <html>
-
+<head>
+</head>
     <body>
        <nav class="navbar navbar-expand-lg bg-light">
        <div class="container-fluid">
