--- a/blog/templates/paginasBlog/secciones/publicaciones.html
+++ b/blog/templates/paginasBlog/secciones/publicaciones.html
@@ -19,18 +19,16 @@
                         <img  src='/static/{{post.imagen}}'  width="50%" />
                      </div>
                      <p align="center">Creado: {{post.fecha_creacion}}/ Autor: {{post.usuario}}</p>
+                     <hr>
+                     <div class="text-success">
+                     <hr>
+                     </div>
+                     <hr class="border border-primary border-3 opacity-75">
                 {%endfor%}
             </article>
         </section>
       </div>
   </div>
 
-    <footer>
-      <div class="panel-footer">
-           <a href="#titulo">Ir al comienzo</a><br>
-        <a href="/formularioContacto/">Contactame aqui</a>
-        <p>Copirigth 2022</p>
-      </div>
-    </footer>
 </div>
 {%endblock%}
