--- a/blog/templates/post/post.html
+++ b/blog/templates/post/post.html
@@ -1,7 +1,8 @@
-{% extends "plantillaPadre.html" %}
+{% extends "paginasBlog/plantillaPadre.html" %}
+
+
 {%load static%}
-
-
+{%load social_share%}
 {% block title %} Post {%endblock %}
 
 {%block content%}
@@ -11,11 +12,11 @@
         <div class="col-md-12">
                 <div class="post">
                     <div class="date">
-                        <p>Publicado: {{post.fecha_creacion}}/ Autor: {{post.usuario}}</p>
+                        <p id="titulo">Publicado: {{post.fecha_creacion}}/ Autor: {{post.usuario}}</p>
                     </div>
                     <div class="post">
                         <h2 align="center">{{post.titulo}}</h2>
-                        <p>{{post.resumen}}</p>
+                        <p >{{post.resumen}}</p>
                         <p>{{post.texto|linebreaksbr}}</p>
                         <img src='/static/{{post.imagen}}' width="50%" />
                     </div>
@@ -23,5 +24,32 @@
         </div>
     </div>
 </div>
+
+{% if user.is_authenticated %}
+    <div class="form-group">
+         <form method="POST" action="{% url 'comentar' %}">
+            {% csrf_token %}
+            <label for="comment">Realice un comentario:</label>
+            <textarea class="form-control" name="comentario" rows="5" id="comment"></textarea>
+            <input type="text" name="id_post" value="{{post.id}}" hidden="">
+             <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" value="GUARDAR">Enviar</button>
+             </div>
+             </form>
+    </div>
+{%else%}
+    <p>Para poder comentar este post de ser usuario <a href="/register/">registrado!!</a></p>
+{% endif %}
+<br>
+<h3>COMENTARIOS</h3>
+{% for com in comentarios %}
+    <strong>FECHA:{{com.fecha}}</strong><br>
+    <strong>USUARIO:{{com.usuario}}</strong><br>
+    <p>{{com.texto}}</p>
+{% endfor %}
+            <a href="/">VOLVER</a>
+            {% post_to_facebook object_or_url "Comparte este post en Facebook"%}
+            {% post_to_twitter object_or_url "Comparte este post en Twitter"%}
+            {% post_to_telegram "Comparte este post en post_to_telegram" object_or_url %}
 
 {%endblock%}
