--- a/blog/templates/paginasBlog/contactoExitoso.html
+++ b/blog/templates/paginasBlog/contactoExitoso.html
@@ -3,5 +3,5 @@
 {% block title %} Enviado {%endblock %}
 
 {%block content%}
- <h1 align="center">Formulario de contaco enviado con exito</h1>
+<h1 align="center" style="color: #fcfffc;">Formulario de contaco enviado con exito</h1>
 {%endblock%}
