--- a/blog/templates/paginasBlog/plantillaPadre.html
+++ b/blog/templates/paginasBlog/plantillaPadre.html
@@ -22,7 +22,7 @@
    <link type="text/css" href='{% static "css/blog.css"%}' rel="stylesheet" />
 
 </head>
-<body>
+<body style="background-image:url('https://cloudfront-us-east-1.images.arcpublishing.com/copesa/BJR47U2GXRCFZFOAZH55MXUITE.jpg')"></body>
 
     {%include "plantillaBarraNavegacion.html"%}
 
