--- a/blog/templates/paginasBlog/quienesSomos.html
+++ b/blog/templates/paginasBlog/quienesSomos.html
@@ -3,12 +3,12 @@
 {% block title %} Nosotros {%endblock %}
 
 {%block content%}
-    <div class="container">
-        <div class="panel panel-default">
+<div style="background-color: rgba(242, 255, 54, 0.836) ; color: #0c0c0c ; ">
+    <div class="container"  style="background-color: rgba(242, 255, 54, 0.836) ; color: #0c0c0c ; ">
+        <div class="panel panel-default" >
             <div class="panel-heading">
-                <h1 id="titulo" align="center" style="color: blue;">Reserva Educativa "SENDEROS"</h1>
-            </div>
-            <div class="panel-body">
+                <h1 id="titulo" align="center" style="color: #0a7506;">Más sobre nosotros!</h1>
+                <div class="panel-body">
                 <div>
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicadores -->
