--- a/blog/templates/paginasBlog/formularioContacto.html
+++ b/blog/templates/paginasBlog/formularioContacto.html
@@ -6,13 +6,13 @@
 
 {%block content%}
 <div class="container">
- <h1>Contactenos</h1>
+<h1 style="color: #fcfffc;" >Contactenos </h1>
     <form action="/contactar/" method="post">{% csrf_token %}
 
-        <p>Asunto: <input type="text" class="form-control" name="txtAsunto"/></p>
+        <p style="color: #fcfffc;">Asunto: <input type="text" class="form-control" name="txtAsunto"/></p>
 
-        <p>Email: <input type="email"  class="form-control" name="txtEmail" height="10"/></p>
-        <p>
+        <p style="color: #fcfffc;">Email: <input type="email"  class="form-control" name="txtEmail" height="10"/></p>
+        <p style="color: #fcfffc;">
             Mensaje:
             <textarea name="txtMensaje" class="form-control" rows="5" cols="30" style="resize: none;"></textarea>
         </p>
