--- a/blog/templates/paginasBlog/plantillaBarraNavegacion.html
+++ b/blog/templates/paginasBlog/plantillaBarraNavegacion.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 {%load static%}
 <html>
-<head>
+<head class="item" >
+  <img src='{%static "img/Senderos.png"%}'alt="1" style="width:100%;">
 </head>
-    <body>
+
+    <body style="background-color: rgba(189, 250, 76, 0.582) ; color: #0c0c0c ; ">
        <nav class="navbar navbar-expand-lg bg-light">
        <div class="container-fluid">
           <a class="navbar-brand" href="/">BLOG</a>
