--- a/blog/templates/paginasBlog/formularioContacto.html
+++ b/blog/templates/paginasBlog/formularioContacto.html
@@ -7,6 +7,19 @@
 {%block content%}
 <div class="container">
 <h1 style="color: #fcfffc;" >Contactenos </h1>
+    <p style="color: #fcfffc;">
+
+Dirección: Reserva Educativa Experimental Senderos, General San Martín, Argentina, 3509
+
+    </p>
+    <p  style="color: #fcfffc;">
+Celular: 03725 49-3966
+
+    </p>
+    <p  style="color: #fcfffc;">
+Correo electrónico: kchito_955.s@hotmail.com
+
+    </p>
     <form action="/contactar/" method="post">{% csrf_token %}
 
         <p style="color: #fcfffc;">Asunto: <input type="text" class="form-control" name="txtAsunto"/></p>
