--- a/blog/templates/paginasBlog/quienesSomos.html
+++ b/blog/templates/paginasBlog/quienesSomos.html
@@ -79,6 +79,9 @@
     La Reserva comprende toda la masa boscosa muy rica en su
     biodiversidad y parte de pajonales y pastizales del sector agrícola..
     </p>
+    <p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3566.5648279329043!2d-59.272044925337546!3d-26.630392181465464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94447a1eb678d9e7%3A0x28d1f260426be028!2sReserva%20Educativa%20Experimental%20%22SENDEROS%22!5e0!3m2!1ses-419!2sar!4v1671552454740!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </p>
     <h1>Datos :</h1>
     <p>
         Encargado/dueño/creador : Kchito (Pedro Rodolfo Salica, DNI N°
