--- a/blog/templates/paginasBlog/plantillaPadre.html
+++ b/blog/templates/paginasBlog/plantillaPadre.html
@@ -38,9 +38,9 @@
       <div class="panel-footer">
             <a href="#titulo">Ir al comienzo</a><br>
             <a href="/formularioContacto/">Contactame aqui</a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=senderos.com"><img alt="Botón redes sociales: Facebook" src="https://blog.hubspot.es/hubfs/media/iconofacebook.png" style="width: 100px; height: 100px; margin-left: auto; margin-right: auto; display: block;"></a>
-            <a href="https://twitter.com/intent/tweet?text=senderos.com"><img alt="Botón de redes sociales: Twitter" src="https://blog.hubspot.es/hubfs/media/iconotwitter.png" style="margin-left: auto; margin-right: auto; display: block;"></a>
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url=senderos.com"><img alt="Botón de redes sociales: LinkedIn" src="https://blog.hubspot.es/hubfs/media/iconolinkedin.png" style="width: 100px; height: 100px; margin-left: auto; margin-right: auto; display: block;"></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=http://reserva2022.pythonanywhere.com/"><img alt="Botón redes sociales: Facebook" src="https://blog.hubspot.es/hubfs/media/iconofacebook.png" style="width: 100px; height: 100px; margin-left: auto; margin-right: auto; display: block;"></a>
+            <a href="https://twitter.com/intent/tweet?text=http://reserva2022.pythonanywhere.com/"><img alt="Botón de redes sociales: Twitter" src="https://blog.hubspot.es/hubfs/media/iconotwitter.png" style="margin-left: auto; margin-right: auto; display: block;"></a>
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://reserva2022.pythonanywhere.com/"><img alt="Botón de redes sociales: LinkedIn" src="https://blog.hubspot.es/hubfs/media/iconolinkedin.png" style="width: 100px; height: 100px; margin-left: auto; margin-right: auto; display: block;"></a>
             <p>Copirigth 2022</p>
       </div>
     </footer>
