--- a/blog/templates/paginasBlog/quienesSomos.html
+++ b/blog/templates/paginasBlog/quienesSomos.html
@@ -105,11 +105,34 @@
     mismo.
     La Reserva comprende toda la masa boscosa muy rica en su
     biodiversidad y parte de pastizales del sector agrícola .
+    </p>
+    <h1>Nuestros objetivos principales son :</h1>
+    <p>
+        - Proteger un sector de ambientes naturales para conservar la
+diversidad de la flora y fauna.<br>
+- Resguardar los hábitats principalmente de las especies que están
+amenazadas y en peligro de extinción.<br>
+- Realizar un inventario de la totalidad de la masa boscosa para
+identificar sus plantas y utilidades sin poner en riesgo su evolución y con
+el menor impacto ambiental.<br>
+- Vincular la Conservación con el Desarrollo Sustentable para generar
+beneficios mutuos.<br>
+- Facilitar y realizar la tarea de Investigación poniendo a disposición de
+todos los Instituto Tecnológico el espacio físico y natural para el desarrollo
+de estudios sistémicos; a los Estudiantes y/o Investigadores la realización
+de sus tareas de Investigación , ya sea
+tesis/maestrías/saber/conocimiento/etc…<br>
+Mi pasión por los hongos…
+"...entrar al mundo mágico de los hongos a fin de comprender la
+profundidad de la Naturaleza, su cuidado y conservación…si pudiera sería
+un bosque de hongos para salvar nuestra especie humana…"
 
     </p>
         </div>
       </div>
     </div>
+ </div>
+ </div>
 
 
 
