--- a/blog/templates/post/post.html
+++ b/blog/templates/post/post.html
@@ -30,7 +30,7 @@
              </form>
     </div>
 {%else%}
-    <p>Para poder comentar este post de ser usuario <a href="/register/">registrado!!</a></p>
+    <p>Para poder comentar este post debe ser usuario <a href="/register/">registrado!!</a></p>
 {% endif %}
 <br>
 <h3>COMENTARIOS</h3>
