--- a/blog/templates/paginasBlog/login.html
+++ b/blog/templates/paginasBlog/login.html
@@ -7,7 +7,7 @@
 
  <form  method="POST" enctype="multipart/form-data"> {%csrf_token%}
      <div class="card">
-         <h5 class="card-header">Login de usuarios</h5>
+         <h1 class="card-header" align="center">Login de usuarios</h1>
 
         <div class="form-label">
             {{form.as_p}}
